--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
     <div class="stack-l">
         <h2>Icon Position</h2>
         <p>
-            Some text and then an icon<svg class="icon icon-suffix"><use xlink:href="#icon-heart"></use></svg>
+            Some text and then an icon<svg class="icon icon-right"><use xlink:href="#icon-heart"></use></svg>
         </p>
         <p>
-            <svg class="icon icon-prefix"><use xlink:href="#icon-heart"></use></svg>And then some text
+            <svg class="icon icon-left"><use xlink:href="#icon-heart"></use></svg>And then some text
         </p>
         <xmp>
             <p>
-                Some text and then an icon<svg class="icon icon-suffix"><use xlink:href="#icon-heart"></use></svg>
+                Some text and then an icon<svg class="icon icon-right"><use xlink:href="#icon-heart"></use></svg>
             </p>
             <p>
-                <svg class="icon icon-prefix"><use xlink:href="#icon-heart"></use></svg>And then some text
+                <svg class="icon icon-left"><use xlink:href="#icon-heart"></use></svg>And then some text
             </p>
         </xmp>
     </div>
@@ -241,6 +241,13 @@
             <span class="caption">This is a help text</span>
         </div>
     </div>
+    <xmp>
+        <div class="input-wrapper">
+            <label class="label">Label</label>
+            <input class="input" placeholder="Placeholder"/>
+            <span class="caption">This is a help text</span>
+        </div>
+    </xmp>
     <div class="stack-m">
         <h2>Input Error</h2>
         <div class="input-wrapper is-error">
@@ -249,6 +256,13 @@
             <span class="caption">This is a help text</span>
         </div>
     </div>
+    <xmp>
+        <div class="input-wrapper is-error">
+            <label class="label">Label</label>
+            <input class="input" placeholder="Placeholder"/>
+            <span class="caption">This is a help text</span>
+        </div>
+    </xmp>
     <div class="stack-m">
         <h2>Textarea</h2>
         <p>
@@ -261,11 +275,107 @@
         </div>
     </div>
     <xmp>
-        <span class="badge">Default</span>
-        <span class="badge badge-positive">Positive</span>
-        <span class="badge badge-negative">Negative</span>
-        <span class="badge badge-warning">Warning</span>
-        <span class="badge badge-info">Info</span>
+        <div class="input-wrapper">
+            <label class="label">Label</label>
+            <textarea class="input" placeholder="Placeholder" rows="1"></textarea>
+            <span class="caption">This is a help text</span>
+        </div>
+    </xmp>
+    <div class="stack-m">
+        <h2>Select</h2>
+        <div class="input-wrapper">
+            <label class="label">Select Input</label>
+            <div class="input-icon-right">
+                <select class="input">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                </select>
+                <svg class="icon">
+                    <use xlink:href="#icon-heart"></use>
+                </svg>
+            </div>
+            <span class="caption">This is a help text</span>
+        </div>
+    </div>
+    <xmp>
+        <div class="input-wrapper">
+            <label class="label">Select Input</label>
+            <div class="input-icon-right">
+                <select class="input">
+                    <option value="...">...</option>
+                </select>
+                <svg class="icon icon-right">
+                    <use xlink:href="#icon-heart"></use>
+                </svg>
+            </div>
+            <span class="caption">This is a help text</span>
+        </div>
+    </xmp>
+    <div class="stack-m">
+        <h2>Input Icons</h2>
+        <div class="input-wrapper stack-m">
+            <label class="label">Label</label>
+            <div class="input-icon-right">
+                <input class="input" placeholder="Placeholder"/>
+                <svg class="icon">
+                    <use xlink:href="#icon-heart"></use>
+                </svg>
+            </div>
+            <span class="caption">This is a help text</span>
+        </div>
+        <xmp>
+            <div class="input-wrapper">
+                <label class="label">Label</label>
+                <div class="input-icon-right">
+                    <input class="input" placeholder="Placeholder"/>
+                    <svg class="icon">
+                        <use xlink:href="#icon-heart"></use>
+                    </svg>
+                </div>
+                <span class="caption">This is a help text</span>
+            </div>
+        </xmp>
+        <div class="input-wrapper">
+            <label class="label">Label</label>
+            <div class="input-icon-left">
+                <input class="input" placeholder="Placeholder"/>
+                <svg class="icon">
+                    <use xlink:href="#icon-heart"></use>
+                </svg>
+            </div>
+            <span class="caption">This is a help text</span>
+        </div>
+        <xmp>
+            <div class="input-wrapper">
+                <label class="label">Label</label>
+                <div class="input-icon-left">
+                    <input class="input" placeholder="Placeholder"/>
+                    <svg class="icon">
+                        <use xlink:href="#icon-heart"></use>
+                    </svg>
+                </div>
+                <span class="caption">This is a help text</span>
+            </div>
+        </xmp>
+    </div>
+    <div class="stack-m">
+        <h2>Input Connected</h2>
+        <div class="input-wrapper">
+            <label class="label">Label</label>
+            <div class="input-connected">
+                <input class="input" placeholder="Placeholder"/>
+            </div>
+            <span class="caption">This is a help text</span>
+        </div>
+    </div>
+    <xmp>
+        <div class="input-wrapper">
+            <label class="label">Label</label>
+            <input class="input" placeholder="Placeholder"/>
+            <span class="caption">This is a help text</span>
+        </div>
     </xmp>
     <h1>Kitsch retro</h1>
     <h2>Typewriter delectus cred</h2>
