--- a/index.html
+++ b/index.html
@@ -366,7 +366,82 @@
             <label class="label">Label</label>
             <div class="input-connected">
                 <input class="input" placeholder="Placeholder"/>
+                <div class="input-icon-right no-flex">
+                    <select class="input">
+                        <option value="volvo">Volvo</option>
+                        <option value="saab">Saab</option>
+                        <option value="mercedes">Mercedes</option>
+                        <option value="audi">Audi</option>
+                    </select>
+                    <svg class="icon">
+                        <use xlink:href="#icon-heart"></use>
+                    </svg>
+                </div>
+                <input class="input" placeholder="Placeholder"/>
+                <div class="input-icon-right">
+                    <input class="input" placeholder="Placeholder"/>
+                    <svg class="icon">
+                        <use xlink:href="#icon-heart"></use>
+                    </svg>
+                </div>
+                <button class="btn no-flex">Default</button>
             </div>
+            <span class="caption">This is a help text</span>
+        </div>
+    </div>
+    <xmp>
+        <div class="input-wrapper">
+            <label class="label">Label</label>
+            <div class="input-connected">
+                <input class="input" placeholder="Placeholder"/>
+                <div class="input-icon-right no-flex">
+                    <select class="input">
+                        <option value="...">...</option>
+                    </select>
+                    <svg class="icon">
+                        <use xlink:href="#icon-heart"></use>
+                    </svg>
+                </div>
+                <input class="input" placeholder="Placeholder"/>
+                <div class="input-icon-right">
+                    <input class="input" placeholder="Placeholder"/>
+                    <svg class="icon">
+                        <use xlink:href="#icon-heart"></use>
+                    </svg>
+                </div>
+                <button class="btn no-flex">Default</button>
+            </div>
+            <span class="caption">This is a help text</span>
+        </div>
+    </xmp>
+    <div class="stack-m">
+        <h2>Input Label</h2>
+        <div class="input-wrapper">
+            <label class="label">Label</label>
+            <div class="input-connected">
+                <div class="input input-label no-flex">Label</div>
+                <input class="input" placeholder="Placeholder"/>
+                <div class="input input-label no-flex">Label</div>
+            </div>
+            <span class="caption">This is a help text</span>
+        </div>
+    </div>
+    <xmp>
+        <div class="input-wrapper">
+            <label class="label">Label</label>
+            <div class="input-connected">
+                <div class="input input-label no-flex">Label</div>
+                <input class="input" placeholder="Placeholder"/>
+                <div class="input input-label no-flex">Label</div>
+            </div>
+            <span class="caption">This is a help text</span>
+        </div>
+    </xmp>
+    <div class="stack-m">
+        <h2>Input Disabled</h2>
+        <div class="input-wrapper">
+            <label class="label">Label</label>
+            <input class="input" placeholder="Placeholder" disabled/>
             <span class="caption">This is a help text</span>
         </div>
     </div>
@@ -377,7 +452,91 @@
             <span class="caption">This is a help text</span>
         </div>
     </xmp>
-    <h1>Kitsch retro</h1>
+    <h1>Toggles</h1>
+    <div class="stack-l">
+        <h2>Checkbox</h2>
+        <div class="input-wrapper">
+            <label class="label label-toggle" for="this-checkbox">Checkbox</label>
+            <input type="checkbox" id="this-checkbox" class="checkbox" />
+            <span class="checkbox-style">
+                <svg class="icon">
+                    <use xlink:href="#icon-checkbox-checkmark"></use>
+                </svg>
+            </span>
+            <span class="caption caption-toggle">This is a help text</span>
+        </div>
+        <xmp>
+            <div class="input-wrapper">
+                <label class="label label-toggle" for="this-checkbox">Checkbox</label>
+                <input type="checkbox" id="this-checkbox" class="checkbox" />
+                <span class="checkbox-style">
+                    <svg class="icon">
+                        <use xlink:href="#icon-checkbox-checkmark"></use>
+                    </svg>
+                </span>
+            </div>
+        </xmp>
+    </div>
+    <div class="stack-l">
+        <h2>Radio</h2>
+        <div class="input-wrapper stack-m">
+            <label class="label label-toggle" for="this-radio-male">Male</label>
+            <input type="radio" id="this-radio-male" name="gender" value="male" class="radio" />
+            <span class="radio-style">
+                <svg class="icon">
+                    <use xlink:href="#icon-radio-checkmark"></use>
+                </svg>
+            </span>
+            <span class="caption caption-toggle">This is a help text</span>
+        </div>
+        <div class="input-wrapper">
+            <label class="label label-toggle" for="this-radio-female">Female</label>
+            <input type="radio" id="this-radio-female" name="gender" value="female"  class="radio" />
+            <span class="radio-style">
+                <svg class="icon">
+                    <use xlink:href="#icon-radio-checkmark"></use>
+                </svg>
+            </span>
+        </div>
+        <xmp>
+            <div class="input-wrapper stack-s">
+                <label class="label label-toggle" for="this-radio-male">Male</label>
+                <input type="radio" id="this-radio-male" name="gender" value="male" class="radio" />
+                <span class="radio-style">
+                    <svg class="icon">
+                        <use xlink:href="#icon-radio-checkmark"></use>
+                    </svg>
+                </span>
+            </div>
+            <div class="input-wrapper">
+                <label class="label label-toggle" for="this-radio-female">Female</label>
+                <input type="radio" id="this-radio-female" name="gender" value="female"  class="radio" />
+                <span class="radio-style">
+                    <svg class="icon">
+                        <use xlink:href="#icon-radio-checkmark"></use>
+                    </svg>
+                </span>
+            </div>
+        </xmp>
+    </div>
+    <div class="stack-l">
+        <h2>Switch</h2>
+        <div class="input-wrapper">
+            <label class="switch-body" for="switch">
+                <input type="checkbox" id="switch" class="switch">
+                <span class="switch-handle"></span>
+            </label>
+        </div>
+        <xmp>
+            <div class="input-wrapper">
+                <label class="switch-body" for="switch">
+                    <input type="checkbox" id="switch" class="switch">
+                    <span class="switch-handle"></span>
+                </label>
+            </div>
+        </xmp>
+    </div>
+    <!-- <h1>Kitsch retro</h1>
     <h2>Typewriter delectus cred</h2>
     <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats McSweeney's minim PBR vegan Tumblr irony. Kogi eu Thundercats, sed scenester before they sold out et aesthetic. Elit cred Vice ethical pickled sartorial. Stumptown roof party freegan High Life vero, ea sed minim meggings.</p>
     <h3>Typewriter delectus cred</h3>
@@ -394,7 +553,7 @@
       <li>Bushwick Schlitzsomeht.</li>
     </ul>
     <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats McSweeney's minim PBR vegan Tumblr irony.</p>
-    <a href="#">Link</a>
+    <a href="#">Link</a> -->
 
     <!-- SVG Sprite -->
     <div class="svg-sprites" style="display:none;">
@@ -411,6 +570,21 @@
             <symbol id="icon-customer">
                 <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                     <path d="M13.41 13.655c1.866.745 3.45 2.09 4.458 3.848.274.48.11 1.09-.37 1.365-.48.274-1.09.108-1.365-.37C14.906 16.357 12.563 15 10 15c-2.55 0-4.9 1.366-6.134 3.5-.276.478-.888.642-1.366.366-.478-.276-.642-.888-.366-1.366 1.01-1.75 2.598-3.095 4.46-3.842C5.614 12.745 5 11.443 5 10V6c0-2.76 2.24-5 5-5s5 2.243 5 5v4c0 1.442-.612 2.742-1.59 3.655zM7 6v4c0 1.65 1.343 3 3 3 1.654 0 3-1.343 3-3V6c0-1.65-1.343-3-3-3-1.653 0-3 1.343-3 3z"/>
+                </svg>
+            </symbol>
+        </svg>
+        <!-- Checkbox Checkmark -->
+        <svg xmlns="http://www.w3.org/2000/svg">
+            <symbol id="icon-checkbox-checkmark">
+                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path d="M6.708 10.29c-.39-.39-1.024-.39-1.415 0-.39.39-.39 1.024 0 1.414l2 2.003c.39.39 1.023.39 1.414 0l6-6c.39-.39.39-1.024 0-1.414-.39-.39-1.024-.39-1.414 0L8 11.585 6.708 10.29z"/>
+                </svg>
+            </symbol>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg">
+            <symbol id="icon-radio-checkmark">
+                <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="10" cy="10" r="4" fill-rule="evenodd"/>
                 </svg>
             </symbol>
         </svg>
