Tables and Lists

--- a/index.html
+++ b/index.html
@@ -536,6 +536,305 @@
             </div>
         </xmp>
     </div>
+    <h1>Tables</h1>
+    <div class="stack-l">
+        <div class="table-wrapper">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Header</th>
+                        <th>Header</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Text</td>
+                        <td>Text</d>
+                    </tr>
+                    <tr>
+                        <td>Text</td>
+                        <td>Text</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <xmp>
+            <div class="table-wrapper">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>...</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>...</td>
+                        </tr>
+                        <tr>
+                            <td>...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </xmp>
+        <h2>Hoverable</h2>
+        <div class="table-wrapper">
+            <table class="table is-hoverable">
+                <thead>
+                    <tr>
+                        <th>Header</th>
+                        <th>Header</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Text</td>
+                        <td>Text</d>
+                    </tr>
+                    <tr>
+                        <td>Text</td>
+                        <td>Text</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <xmp>
+            <div class="table-wrapper">
+                <table class="table is-hoverable">
+                    <thead>
+                        <tr>
+                            <th>...</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>...</td>
+                        </tr>
+                        <tr>
+                            <td>...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </xmp>
+        <h2>Collapsed</h2>
+        <div class="table-wrapper">
+            <table class="table is-collapsed">
+                <thead>
+                    <tr>
+                        <th>Header</th>
+                        <th>Header</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Text</td>
+                        <td>Text</d>
+                    </tr>
+                    <tr>
+                        <td>Text</td>
+                        <td>Text</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <xmp>
+            <div class="table-wrapper">
+                <table class="table is-collapsed">
+                    <thead>
+                        <tr>
+                            <th>...</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>...</td>
+                        </tr>
+                        <tr>
+                            <td>...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </xmp>
+        <h2>Sortable</h2>
+        <div class="table-wrapper">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th class="is-sortable">
+                            Header<svg class="icon icon-right"><use xlink:href="#icon-heart"></use></svg>
+                        </th>
+                        <th class="is-sortable">
+                            Header<svg class="icon icon-right"><use xlink:href="#icon-heart"></use></svg>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Text</td>
+                        <td>Text</d>
+                    </tr>
+                    <tr>
+                        <td>Text</td>
+                        <td>Text</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <xmp>
+            <div class="table-wrapper">
+                <table class="table table-collapsed">
+                    <thead>
+                        <tr>
+                            <th class="is-sortable">
+                                ...<svg class="icon icon-right">...</svg>
+                            </th>
+                            <th class="is-sortable">
+                                ...<svg class="icon icon-right">...</svg>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>...</td>
+                        </tr>
+                        <tr>
+                            <td>...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </xmp>
+        <h2>Negative Row</h2>
+        <div class="table-wrapper">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Header</th>
+                        <th>Header</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="is-negative">
+                        <td>Text</td>
+                        <td>Text</d>
+                    </tr>
+                    <tr>
+                        <td>Text</td>
+                        <td>Text</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <xmp>
+            <div class="table-wrapper">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>...</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="is-negative">
+                            <td>...</td>
+                        </tr>
+                        <tr>
+                            <td>...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </xmp>
+        <h2>Numeric Values</h2>
+        <div class="table-wrapper">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Header</th>
+                        <th class="text-right">Header</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Text</d>
+                        <td class="text-right is-numeric">$100,000.00</d>
+                    </tr>
+                    <tr>
+                        <td>Text</d>
+                        <td class="text-right is-numeric">235</d>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <xmp>
+            <div class="table-wrapper">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="text-right">...</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="is-negative">
+                            <td class="text-right is-numeric">...</td>
+                        </tr>
+                        <tr>
+                            <td class="text-right is-numeric">...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </xmp>
+    </div>
+    <h1>Lists</h1>
+    <div class="stack-l">
+        <ul class="list">
+            <li class="list-item">item</li>
+            <li class="list-item">item</li>
+            <li class="list-item">item</li>
+        </ul>
+        <xmp>
+            <ul class="list">
+                <li class="list-item">item</li>
+                <li class="list-item">item</li>
+                <li class="list-item">item</li>
+            </ul>
+        </xmp>
+    </div>
+    <div class="stack-l">
+        <h2>Icon List</h2>
+        <ul class="list list-icon">
+            <li class="list-item">
+                <svg class="icon"><use xlink:href="#icon-heart"></use></svg>
+                <span class="list-item-content">item</span>
+            </li>
+            <li class="list-item">
+                <svg class="icon"><use xlink:href="#icon-heart"></use></svg>
+                <span class="list-item-content">item</span>
+            </li>
+            <li class="list-item">
+                <svg class="icon"><use xlink:href="#icon-heart"></use></svg>
+                <span class="list-item-content">item</span>
+            </li>
+        </ul>
+        <xmp>
+            <ul class="list list-icon">
+                <li class="list-item">
+                    <svg class="icon">...</svg>
+                    <span class="list-item-content">item</span>
+                </li>
+                <li class="list-item">
+                    <svg class="icon">...</svg>
+                    <span class="list-item-content">item</span>
+                </li>
+                <li class="list-item">
+                    <svg class="icon">...</svg>
+                    <span class="list-item-content">item</span>
+                </li>
+            </ul>
+        </xmp>
+    </div>
     <!-- <h1>Kitsch retro</h1>
     <h2>Typewriter delectus cred</h2>
     <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats McSweeney's minim PBR vegan Tumblr irony. Kogi eu Thundercats, sed scenester before they sold out et aesthetic. Elit cred Vice ethical pickled sartorial. Stumptown roof party freegan High Life vero, ea sed minim meggings.</p>
