--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
         </div>
         <xmp>
             <div class="table-wrapper">
-                <table class="table table-collapsed">
+                <table class="table">
                     <thead>
                         <tr>
                             <th class="is-sortable">
