--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body class="inset-l">
+    <div class="container">
+
+        <button class="btn btn-fluid stack-m">Fluid</button>
+        <div class="row">
+            <div class="field inline-m">
+                <label class="field-label">Label</label>
+                <input class="field-input" placeholder="Placeholder"/>
+                <span class="field-caption">This is a help text</span>
+            </div>
+            <div class="field inline-m">
+                <label class="field-label">Label</label>
+                <input class="field-input" placeholder="Placeholder"/>
+                <span class="field-caption">This is a help text</span>
+            </div>
+            <div class="field">
+                <label class="field-label">Label</label>
+                <input class="field-input" placeholder="Placeholder"/>
+                <span class="field-caption">This is a help text</span>
+            </div>
+        </div>
+    </div>
     <h1>Buttons</h1>
     <div class="stack-l">
         <button class="btn inline-s">Default</button>
@@ -232,6 +253,19 @@
         <span class="badge badge-warning">Warning</span>
         <span class="badge badge-info">Info</span>
     </xmp>
+    <div class="stack-l">
+        <h2>Status Badges</h2>
+        <span class="has-badge is-positive inline-m" style="display:inline-block;width:100px;height:36px;background:#eceff0;text-align:center;line-height:36px;">Element</span>
+        <span class="has-badge is-negative inline-m" style="display:inline-block;width:100px;height:36px;background:#eceff0;text-align:center;line-height:36px;">Element</span>
+        <span class="has-badge is-warning inline-m" style="display:inline-block;width:100px;height:36px;background:#eceff0;text-align:center;line-height:36px;">Element</span>
+        <span class="has-badge is-info" style="display:inline-block;width:100px;height:36px;background:#eceff0;text-align:center;line-height:36px;">Element</span>
+        <xmp>
+            <span class="has-badge is-positive">Element</span>
+            <span class="has-badge is-negative">Element</span>
+            <span class="has-badge is-warning">Element</span>
+            <span class="has-badge is-info">Element</span>
+        </xmp>
+    </div>
     <h1>Inputs</h1>
     <div class="stack-m">
         <h2>Input</h2>
